# krakenplay

./: .gitignore  .gitmodules  CMakeLists.txt  Krakenplay.sln  README.md
client/: CMakeLists.txt  client.cpp  client.h  client.vcxproj  client.vcxproj.filters  gamepadfetcher.h  inputfetchdevice.h  inputfetcher.cpp  inputfetcher.h  inputsystem.cpp  inputsystem.h  keyboardfetcher.h  main.cpp  messages.cpp  mousefetcher.cpp  mousefetcher.h  networkclient.h
client/implementation/: gamepadfetcher.cpp  inputfetcher.cpp  keyboardfetcher.cpp  messages.cpp  mousefetcher.cpp  networkclient.cpp
client_win/: client_win.vcxproj
docs/: Doxyfile
krakenplay/: CMakeLists.txt  inputmanager.cpp  inputmanager.h  krakenplay.cpp  krakenplay.h  krakenplay.vcxproj  krakenplay.vcxproj.filters  messages.cpp  messages.h  networkserver.h  socketabstraction.h
krakenplay/Time/Implementation/: Time.cpp
krakenplay/Time/Implementation/Posix/: Time_posix.h
krakenplay/Time/Implementation/Win/: Time_win.h
krakenplay/implementation/: inputmanager.cpp  inputmanager.inl  messages.cpp  networkserver.cpp  socketabstraction.cpp
krakenplay/time/: stopwatch.h  time.h
krakenplay/time/implementation/: stopwatch.cpp  time.cpp  time_inl.h  time_osx.h  time_posix.h  time_win.h
sample_console/: CMakeLists.txt  main.cpp  sample_console.vcxproj
sample_sfml/: CMakeLists.txt  player.h  sample_console.vcxproj.filters  sample_sfml.vcxproj  sample_sfml.vcxproj.filters
test_console/: main.cpp  test_console.vcxproj
test_sfml/: main.cpp  player.cpp  player.h  test_sfml.vcxproj  test_sfml.vcxproj.filters
testapplication/: TestApplication.vcxproj  main.cpp
